@@ -6,10 +6,11 @@ until /usr/local/bin/check ${CORE_HOST}/api/health/; do
     sleep 2
 done
 
+export GIN_MODE=release
 export WORK_DIR=/opt/chen
 export COMPONENT_NAME=chen
 export WISP_TRACE_PROCESS=1
-export EXECUTE_PROGRAM="java -Dfile.encoding=utf-8 --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAME -XX:+ExitOnOutOfMemoryError -jar /opt/chen/chen.jar --mock.enable=false"
+export EXECUTE_PROGRAM="java -Dfile.encoding=utf-8 -XX:+ExitOnOutOfMemoryError -jar /opt/chen/chen.jar --mock.enable=false"
 
 if [ ! "$LOG_LEVEL" ]; then
     LOG_LEVEL=ERROR
